@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-06T08:23:19Z",
-  "count_outdated" : 498,
-  "uniques_outdated" : 289,
-  "count" : 526,
+  "timestamp" : "2022-09-06T16:22:28Z",
+  "count_outdated" : 500,
+  "uniques_outdated" : 290,
+  "count" : 527,
   "uniques" : 305,
   "clones" : [
-    {
-      "timestamp": "2022-08-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-08-24T00:00:00Z",
       "count": 2,
