@@ -1,3 +1,11 @@
+2022-09-06T16:22:28Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3001776458
+* notice: last 14d: unq all: 5 27
+* notice: prev accum: outdated-unq outdated-all / unq all: 289 498 / 305 526
+* notice: next accum: outdated-unq outdated-all / unq all: 290 500 / 305 527
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-08-23] / []
+
 2022-09-06T08:23:19Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2998604609
 * notice: last 14d: unq all: 5 28
